--- a/includes/form.css
+++ b/includes/form.css
@@ -66,8 +66,8 @@
 }/*#TEXTAREA_13*/
 
 #INPUT_14 {
-  color:#002366;
-  background-color:#f3f3f3;
+  background-color:#002366;
+  color:#f3f3f3;
     display: block;
     float: left;
     height: 85px;
