--- a/includes/slideshow/demoStyleSheet.css
+++ b/includes/slideshow/demoStyleSheet.css
@@ -7,7 +7,7 @@ body{font:14px Tahoma, Geneva, sans-serif;}
 #fssNext{position:absolute;top:169px;left:646px;background:url(arrows.png) no-repeat;width:67px;height:143px;text-indent:-999999px;}
 #fssPlayPause{position:absolute;top:435px;right:20px;background:url(white.png) repeat;padding:4px 0 5px 0;-moz-border-radius:5px;border-radius:5px;width:60px;text-align:center;display:block;color:#333;text-decoration:none;}
 
-ul#slideshow{list-style:none;border:1px solid #999;padding:2px;margin:auto;margin-top:5%;width:640px;height:480px;overflow:hidden;}
+ul#slideshow{list-style:none;border:0;padding:2px;margin:auto;margin-top:5%;width:640px;height:480px;overflow:hidden;}
 p{text-align:center;}
 #fssList{list-style:none;width:646px;margin:auto;padding:5px 0 0 45%;}
 #fssList li{display:inline;padding-right:10px;}
@@ -21,3 +21,5 @@ p{text-align:center;}
 #top h1 a:hover{text-decoration:none;}
 
 small a{color:#000;}
+
+#slideshow img {width:100%;height: 100%;}
