--- a/includes/style.css
+++ b/includes/style.css
@@ -19,7 +19,12 @@
   font-weight: 500;
 }
 body  {
+  background-color:white;
   font-family: 'Open Sans', sans-serif;
+}
+
+p {
+  font-size: 1.2em;
 }
 
 ul.footericons li  {
@@ -69,7 +74,7 @@ h1{
 
 .aboutme {
   font-family: 'Cardo', serif;
-  font-size: 1.1em;
+  font-size: 1.2em;
   width:90%;
   margin:0;
   padding:0;
@@ -85,8 +90,6 @@ h1{
   margin-left: 0;
   margin-right: 0;
   background-color:white;
-  margin-top:20px;
-  margin-bottom:20px;
   padding-top: 40px;
   padding-bottom: 30px;
 }
@@ -94,4 +97,14 @@ h1{
   background-color: #002366;
   color:white;
 }
+.grey {
+  background-color:#ccc;
+  color:black;
+}
 
+.rushevents p {
+  font-size: 2em;
+  line-height: 2em;
+  color:black;
+  margin-bottom:0px;
+}
