--- a/includes/style.css
+++ b/includes/style.css
@@ -108,3 +108,29 @@ h1{
   color:black;
   margin-bottom:0px;
 }
+
+.description {
+  font-size: 1.5em;
+  line-height: 1.3em;
+}
+
+.smallpic1 {
+  width:180px;
+  height:135px;
+  padding:5px;
+}
+.smallpic2 {
+  width:135px;
+  height:180px;
+  padding:5px;
+}
+
+.img_gal img {
+  filter: gray;
+  -webkit-filter: grayscale(100%);
+}
+
+.img_gal img:hover {
+  filter:none;
+  -webkit-filter: grayscale(0%);
+}
